--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -17,7 +17,7 @@
         <h1> Hello, </h1>
         <h1>I'm Davis Morrell</h1>
          <div>
-           <img src="/images/headshot.jpg" width="250" alt="headshot of Davis">
+           <img src="./images/headshot.jpg" width="250" alt="headshot of Davis">
          </div>
       </div>
     </header>
@@ -27,7 +27,7 @@
       <div>
         <h2> About me </h2>
           <div class="box-center">
-        <p> I am a new Software Developer located in Denver, CO.</p>
+        <p> I am a new Software Developer located in Denver, CO. I am passionate about Software Development because I enjoy building code from scratch into something useful. I also enjoy the problem-solving that comes with coding challenges.</p>
         <p> I am looking for an employer who values: </p>
         <ul>
           <li> Loyalty </li>
@@ -40,9 +40,9 @@
           <li> Indoor rock climbing</li>
           <li> Going to shows with friends </li>
         </ul>
-        <p> Thank you for taking the time to visit my webpage! I come from a technical background that includes professional work in Audio Engineering, higher education, and emergency services as an EMT and Volunteer Firefighter. </p>
-        <p> I am currently enrolled part-time at Metropolitan State University of Denver studying for my undergrad in Computer Science. Recently, I have also enrolled in a coding bootcamp at Thinkful which I hope to finish by August 2022. Upon completion my goal is to apply my technical background to software development, where I feel that I can affect a positive role in the way consumers use online web services. </p>
-        <p> I currently live in Denver, CO. with my wife and two kids. I am happy to discuss whatever projects you think I could contribute to. Thanks again for your time.</p> 
+        <p> Thank you for taking the time to visit my webpage! I come from a technical background that includes professional work in Audio Engineering, higher education, and emergency services as an EMT and Volunteer Firefighter. I am heavily relied on to support group dynamics and build confident, efficient teams. </p>
+        <p> I am currently enrolled part-time at Metropolitan State University of Denver studying for my undergrad in Computer Science. Recently, I have also enrolled in a coding boot camp at Thinkful which I hope to finish by August 2022. Upon completion, my goal is to apply my technical background to software development, where I feel that I can affect a positive role in the way consumers use online web services. </p>
+        <p> I am happy to discuss whatever projects you think I could contribute to. Thanks again for your time.</p> 
         
           </div>
       </div>
@@ -52,12 +52,12 @@
 <!-- Contact Section -->
     <section id = "contact">
       <div> 
-        <h2> Contact </h2>
+        <h3> Contact </h3>
           <div class="box-center">
             <p> Please contact me at either:</p>
             <ol>
-              <li><a href="https://github.com/dwmorrell">Github</a></li>
-              <li><a href="https://www.linkedin.com/in/davis-morrell-a4ab57230/">LinkedIn</a></li>
+              <li><a href="https://github.com/dwmorrell" target="_blank">Github</a></li>
+              <li><a href="https://www.linkedin.com/in/davis-morrell-a4ab57230/" target="_blank">LinkedIn</a></li>
             </ol>
           </div>
       </div>
