--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul>
           <li> Cooking with my family</li>
           <li> Indoor rock climbing</li>
-          <li> Going to shows with friends </li>
+          <li> Photography </li>
         </ul>
         <p> Thank you for taking the time to visit my webpage! I come from a technical background that includes professional work in Audio Engineering, higher education, and emergency services as an EMT and Volunteer Firefighter. I am heavily relied on to support group dynamics and build confident, efficient teams. </p>
         <p> I am currently enrolled part-time at Metropolitan State University of Denver studying for my undergrad in Computer Science. Recently, I have also enrolled in a coding boot camp at Thinkful which I hope to finish by August 2022. Upon completion, my goal is to apply my technical background to software development, where I feel that I can affect a positive role in the way consumers use online web services. </p>
@@ -54,11 +54,11 @@
       <div> 
         <h3> Contact </h3>
           <div class="box-center">
-            <p> Please contact me at either:</p>
-            <ol>
+            <p> Please view my current projects on Github and connect with me on LinkedIn:</p>
+            <ul>
               <li><a href="https://github.com/dwmorrell" target="_blank">Github</a></li>
               <li><a href="https://www.linkedin.com/in/davis-morrell-a4ab57230/" target="_blank">LinkedIn</a></li>
-            </ol>
+            </ul>
           </div>
       </div>
     </section>
